Fixed bug where the loading spinner would appear off-center in some themes.

--- a/css/editors/image.css
+++ b/css/editors/image.css
@@ -53,6 +53,7 @@
 
 .quickedit-image-dropzone.loading .quickedit-image-icon::after {
   display: block;
+  box-sizing: content-box;
   content: "";
   margin-left: -10px;
   margin-top: -5px;
